--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "convert-vapid-public-key": "^2.0.0",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
