--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,44 +1,45 @@
 {
-	"name": "my-app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"test": "npm run test:integration && npm run test:unit",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.40.1",
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.29.0",
-		"autoprefixer": "^10.4.16",
-		"eslint": "^8.55.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"flowbite": "^2.2.0",
-		"flowbite-svelte": "^0.44.20",
-		"flowbite-svelte-icons": "^0.4.5",
-		"postcss": "^8.4.32",
-		"postcss-load-config": "^5.0.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^4.2.8",
-		"svelte-check": "^3.6.2",
-		"tailwindcss": "^3.3.6",
-		"typescript": "^5.3.3",
-		"vite": "^4.5.1",
-		"vitest": "^1.0.4"
-	},
-	"type": "module",
-	"dependencies": {
-		"pg": "^8.11.3",
-		"web-push": "^3.6.6"
-	}
+    "name": "my-app",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+        "test": "npm run test:integration && npm run test:unit",
+        "lint": "prettier --check . && eslint .",
+        "format": "prettier --write .",
+        "test:integration": "playwright test",
+        "test:unit": "vitest"
+    },
+    "devDependencies": {
+        "@playwright/test": "^1.40.1",
+        "@sveltejs/adapter-auto": "^2.1.1",
+        "@sveltejs/kit": "^1.29.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.35.1",
+        "flowbite": "^2.2.0",
+        "flowbite-svelte": "^0.44.20",
+        "flowbite-svelte-icons": "^0.4.5",
+        "postcss": "^8.4.32",
+        "postcss-load-config": "^5.0.2",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.9",
+        "svelte": "^4.2.8",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.3.3",
+        "vite": "^4.5.1",
+        "vitest": "^1.0.4",
+        "houdini": "^1.2.34",
+        "houdini-svelte": "^1.2.34"
+    },
+    "type": "module",
+    "dependencies": {
+        "pg": "^8.11.3",
+        "web-push": "^3.6.6"
+    }
 }
